[project]
name = "empty"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.3.2",
    "fake-useragent>=2.2.0",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.12",
]
